      and ``tearDown`` weren't called.  This catches faulty tests that
      forget to upcall when overriding ``setUp`` and ``tearDown``.  Those
      faulty tests were not properly isolated.
      (Andrew Bennetts, Robert Collins)

  INTERNALS:

    * New ``assertLength`` method based on one Martin has squirreled away
      somewhere. (Robert Collins, Martin Pool)

    * New repository method ``refresh_data`` to cause any repository to
      make visible data inserted into the repository by a smart server
      fetch operation. (Robert Collins, Andrew Bennetts)

    * Removed ``InterRemoteToOther``, ``InterOtherToRemote`` and
      ``InterPackToRemotePack`` classes, as they are now unnecessary.
      (Andrew Bennetts)
      
    * ``_walk_to_common_revisions`` will now batch up at least 50
      revisions before calling ``get_parent_map`` on the target,
      regardless of ``InterRepository``.
      (Andrew Bennetts, Robert Collins)


bzr 1.13 "paraskavedekatriaphobia" 2009-03-14
---------------------------------------------

This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --log-format gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``.  Lightweight checkouts
and stacked branches should both be much faster over remote connections.

  CHANGES FROM bzr 1.13rc1 2009-03-10:

    * Fix "is not a stackable format" error when pushing a
      stackable-format branch with an unstackable-format repository to a
      destination with a default stacking policy.  (Andrew Bennetts)

    * Progress bars now show the rate of network activity for
      ``bzr+ssh://`` and ``bzr://`` connections.  (Andrew Bennetts)

  COMPATIBILITY BREAKS:

    * ``bzr log --line`` now indicates which revisions are merges with
      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:
