@@ -114,6 +114,10 @@ IN DEVELOPMENT
     * New ``assertLength`` method based on one Martin has squirreled away
       somewhere. (Robert Collins, Martin Pool)
 
+    * New hook ``BzrDir.pre_open`` which runs before opening ``BzrDir``
+      objects, allowing better enforcement of the smart server jail when
+      dealing with stacked branches. (Robert Collins, Andrew Bennetts)
+
     * New repository method ``refresh_data`` to cause any repository to
       make visible data inserted into the repository by a smart server
       fetch operation. (Robert Collins, Andrew Bennetts)
